--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "function-plot": "^1.22.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-material-ui-carousel": "^3.3.3",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
