--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "function-plot": "^1.22.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-latex": "^2.0.0",
     "react-material-ui-carousel": "^3.3.3",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
@@ -44,5 +45,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-latex": "^2.0.0"
+  },
+  "resolutions": {
+    "react-material-ui-carousel/react": "^18.0.0",
+    "react-material-ui-carousel/react-dom": "^18.0.0"
   }
 }
