--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "function-plot": "^1.22.8",
+    "mathjs": "^10.4.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-latex": "^2.0.0",
